# template-mcp

./: .gitignore  CLAUDE.md  Dockerfile  PRD.md  README.md  claude_desktop_config.json  pyproject.toml
.github/workflows/: build-container.yml
src/template_mcp/: __init__.py  loader.py  models.py  server.py
src/template_mcp/template_content/: weekly_linear_project_update.py
